--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         class="fixed top-12 right-[-100%] w-[200px] bg-white border-2 shadow-lg rounded-md z-50 transition-transform duration-300 ease-in-out md:static md:right-auto md:w-fit md:border-none md:shadow-none md:bg-slate-100 flex"
         id="menu-container"
       >
-        <ul class="flex items-center justify-center gap-8">
+        <ul class="flex flex-col md:flex-row items-center gap-2 py-4 px-2 md:py-2 md:px-2">
           <li class="text cursore-pointer"><a href="#">Home</a></li>
           <li class="text cursore-pointer"><a href="#">Help</a></li>
           <li class="text cursore-pointer"><a href="#">Services</a></li>
@@ -72,24 +72,41 @@
                         <img src="/image/apk.png" class="max-w-[150px]" alt="download apk">
                     </a>
                 </button> -->
+        </div>
 
+        <div class="mt-5">
+          <div class="flex items-center gap-8 justify-start">
+            <span>
+              <img
+                src="/image/apps_icon.jpg"
+                class="max-w-[80px]"
+                alt="apps icon"
+              />
+            </span>
 
-                <div>
-                    <span>
-                        <img src="/image/apps_icon.jpg" alt="apps icon">
-                        <div>
-                            <h1>Student Job Reward</h1>
-                            <h3>Version: 1.3.0</h3>
-                            <h3>Developer: YSN Privacy</h3>
-                        </div>
-                    </span>
+            <div>
+              <h1>
+                <span class="text-blue-500 font-bold">Student Job Reward</span>
+              </h1>
+              <h3>Version: <span class="text-blue-500 text-sm">1.3.0</span></h3>
+              <h3>
+                Developer:
+                <span class="text-blue-500 text-sm">YSN Privacy</span>
+              </h3>
+            </div>
+          </div>
 
-                    <div>
-                        <button>
-                            
-                        </button>
-                    </div>
-                </div>
+          <div
+            class="w-full text-center mx-auto px-8 py-2 bg-blue-500 mt-5 text-white shadow-md cursor-pointer hover:bg-blue-800 transition"
+          >
+            <button>
+              <span>
+                <i class="fa-solid fa-download"></i>
+              </span>
+
+              <span> download apk </span>
+            </button>
+          </div>
         </div>
       </div>
 
