--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
         class="fixed top-12 right-[-100%] w-[200px] bg-white border-2 shadow-lg rounded-md z-50 transition-transform duration-300 ease-in-out md:static md:right-auto md:w-fit md:border-none md:shadow-none md:bg-slate-100 flex"
         id="menu-container"
       >
-        <ul class="flex flex-col md:flex-row items-center gap-2 py-4 px-2 md:py-2 md:px-2">
+        <ul
+          class="flex flex-col md:flex-row items-center gap-2 py-4 px-2 md:py-2 md:px-2"
+        >
           <li class="text cursore-pointer"><a href="#">Home</a></li>
           <li class="text cursore-pointer"><a href="#">Help</a></li>
           <li class="text cursore-pointer"><a href="#">Services</a></li>
@@ -78,7 +80,7 @@
           <div class="flex items-center gap-8 justify-start">
             <span>
               <img
-                src="/image/apps_icon.jpg"
+                src="image/apps_icon.jpg"
                 class="max-w-[80px]"
                 alt="apps icon"
               />
@@ -112,7 +114,7 @@
 
       <div class="order-1">
         <img
-          src="/image/phone.gif"
+          src="image/phone.gif"
           class="max-w-[200px] md:max-w-[280px]"
           alt="phone"
         />
