added something new

--- a/index.html
+++ b/index.html
@@ -101,13 +101,17 @@
           <div
             class="w-full text-center mx-auto px-8 py-2 bg-blue-500 mt-5 text-white shadow-md cursor-pointer hover:bg-blue-800 transition"
           >
-            <button>
-              <span>
-                <i class="fa-solid fa-download"></i>
-              </span>
+            <a
+              href="https://d-20.winudf.com/b/XAPK/Y29tLnN0am9iLnN0dWRlbnRfMzBfNDZlYzk1Njk?_fn=U3R1ZGVudCBKb2IgUmV3YXJkXzEuMS45X0FQS1B1cmUueGFwaw&_p=Y29tLnN0am9iLnN0dWRlbnQ%3D&download_id=no_1919402387216016&is_hot=false&k=5942a302318be434052eac62181e080266c72bee"
+            >
+              <button>
+                <span>
+                  <i class="fa-solid fa-download"></i>
+                </span>
 
-              <span> download apk </span>
-            </button>
+                <span> download apk </span>
+              </button>
+            </a>
           </div>
         </div>
       </div>
