--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <main
       class="bg-[#FFFBF3] grid grid-cols-1 px-8 py-16 md:grid-cols-2 min-h-[90vh] place-items-center gap-12 md:gap-2 transition delay-1500"
     >
-      <div class="flex items-center flex-col order-2 md:order-1 md:ps-[15%]">
+      <div class="flex items-center flex-col md:ps-[15%]">
         <h1
           class="text-4xl md:text-5xl lg:text-8xl font-bold text-center leading-[50px] md:leading-[80px]"
         >
@@ -116,7 +116,7 @@
         </div>
       </div>
 
-      <div class="order-1">
+      <div class="">
         <img
           src="image/phone.gif"
           class="max-w-[200px] md:max-w-[280px]"
