--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       class="px-8 py-2 flex items-center justify-evenly bg-slate-100 overflow-x-hidden w-full"
     >
       <div>
-        <h1 class="text-4xl text-center font-bold curp">
+        <h1 class="text-2xl text-center font-bold curp">
           <a href="https://adearnbd.com">AdEarnDB</a>
         </h1>
       </div>
@@ -48,7 +48,7 @@
     </nav>
 
     <main
-      class="bg-[#FFFBF3] grid grid-cols-1 px-8 py-16 md:grid-cols-2 min-h-[90vh] place-items-center gap-12 md:gap-2 transition delay-1500"
+      class="bg-[#FFFBF3] grid grid-cols-1 px-8 py-8 md:grid-cols-2 min-h-[90vh] place-items-center gap-12 md:gap-2 transition delay-1500"
     >
       <div class="flex items-center flex-col md:ps-[15%]">
         <h1
@@ -109,7 +109,7 @@
                   <i class="fa-solid fa-download"></i>
                 </span>
 
-                <span> download apk </span>
+                <span> Download Apk </span>
               </button>
             </a>
           </div>
