added social media

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     >
       <div class="flex items-center flex-col md:ps-[15%]">
         <h1
-          class="text-4xl md:text-5xl lg:text-8xl font-bold text-center leading-[50px] md:leading-[80px]"
+          class="text-2xl md:text-5xl lg:text-8xl font-bold text-center leading-[50px] md:leading-[80px]"
         >
           Earn money <br />anytime, anywhere
         </h1>
@@ -76,6 +76,7 @@
                 </button> -->
         </div>
 
+        <!-- apps information starts here -->
         <div class="mt-5">
           <div class="flex items-center gap-8 justify-start">
             <span>
@@ -114,6 +115,30 @@
             </a>
           </div>
         </div>
+
+        <!-- apps information ends here -->
+
+        <!-- social media starts here -->
+        <div class="w-4/5 mx-auto">
+          <ul class="flex items-center justify-center gap-8 mt-8">
+            <li>
+              <a href="#">
+                <img src="image/telegram.png" class="max-w-[30px]" alt="telegram" />
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="image/youtube.png" class="max-w-[30px]" alt="youtubefacebook" />
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="image/facebook.png" class="max-w-[30px]" alt="facebook" />
+              </a>
+            </li>
+          </ul>
+        </div>
+        <!-- social media ends here -->
       </div>
 
       <div class="">
@@ -125,12 +150,14 @@
       </div>
     </main>
 
-    <!-- footer -->
+    <!-- footer starts here-->
     <footer
       class="text-[12px] text-center min-h-[50px] flex items-center justify-center"
     >
       <p>all rights reserved by &copy;adearnbd.com @2024</p>
     </footer>
+
+    <!-- footer ends here -->
 
     <script src="./main.js"></script>
   </body>
