minor fixes on video

--- a/index.html
+++ b/index.html
@@ -37,12 +37,11 @@
         class="fixed top-12 right-[-100%] w-[200px] bg-white border-2 shadow-lg rounded-md z-50 transition-transform duration-300 ease-in-out md:static md:right-auto md:w-fit md:border-none md:shadow-none md:bg-slate-100 flex"
         id="menu-container"
       >
-        <ul
-          class="flex flex-col md:flex-row items-center gap-2 py-4 px-2 md:py-2 md:px-2"
-        >
-          <li class="text cursore-pointer"><a href="#">Home</a></li>
-          <li class="text cursore-pointer"><a href="#">Help</a></li>
-          <li class="text cursore-pointer"><a href="#">Services</a></li>
+        <ul class="p-8 flex flex-col md:flex-row">
+          <li class="cursore-pointer"><a href="#">Home</a></li>
+          <li class="cursore-pointer"><a href="#">Contact</a></li>
+
+          <li class="cursore-pointer"><a href="#">About us</a></li>
         </ul>
       </div>
     </nav>
@@ -102,9 +101,11 @@
           <div
             class="w-full text-center mx-auto px-8 py-2 bg-blue-500 mt-5 text-white shadow-md cursor-pointer hover:bg-blue-800 transition"
           >
+            <!-- download link here -->
             <a
               href="https://d-20.winudf.com/b/XAPK/Y29tLnN0am9iLnN0dWRlbnRfMzBfNDZlYzk1Njk?_fn=U3R1ZGVudCBKb2IgUmV3YXJkXzEuMS45X0FQS1B1cmUueGFwaw&_p=Y29tLnN0am9iLnN0dWRlbnQ%3D&download_id=no_1919402387216016&is_hot=false&k=5942a302318be434052eac62181e080266c72bee"
             >
+              <!-- download link ends here -->
               <button>
                 <span>
                   <i class="fa-solid fa-download"></i>
@@ -122,18 +123,37 @@
         <div class="w-4/5 mx-auto">
           <ul class="flex items-center justify-center gap-8 mt-8">
             <li>
-              <a href="#">
-                <img src="image/telegram.png" class="max-w-[30px]" alt="telegram" />
+              <!-- telegram link -->
+              <a href="https://t.me/studentjob24">
+                <img
+                  src="image/telegram.png"
+                  class="max-w-[30px]"
+                  alt="telegram"
+                />
               </a>
             </li>
             <li>
-              <a href="#">
-                <img src="image/youtube.png" class="max-w-[30px]" alt="youtubefacebook" />
+              <!-- youtube channel link -->
+              <a
+                href="https://youtube.com/@technologykingbd?si=N9MLxe1L6B2VFXpx"
+              >
+                <img
+                  src="image/youtube.png"
+                  class="max-w-[30px]"
+                  alt="youtubefacebook"
+                />
               </a>
             </li>
             <li>
-              <a href="#">
-                <img src="image/facebook.png" class="max-w-[30px]" alt="facebook" />
+              <!-- facebook link -->
+              <a
+                href="https://www.facebook.com/saddamhossen.joy.71?mibextid=ZbWKwL"
+              >
+                <img
+                  src="image/facebook.png"
+                  class="max-w-[30px]"
+                  alt="facebook"
+                />
               </a>
             </li>
           </ul>
@@ -142,13 +162,32 @@
       </div>
 
       <div class="">
+        <!-- screenshot goes here -->
         <img
           src="image/phone.gif"
           class="max-w-[200px] md:max-w-[280px]"
           alt="phone"
         />
+
+        <!-- screenshot ends here -->
       </div>
     </main>
+
+    <!-- youtube video starts here -->
+    <div class="w-4/5 mx-auto px-2 md:mt-16">
+      <h1 class="text-2xl font-bold my-4 capitalize">Your video title here</h1>
+      <iframe
+        src="https://www.youtube.com/embed/kuPzoh5tucI?si=0xKCY_F_skm9FI5k"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin"
+        allowfullscreen
+        class="w-full h-auto md:min-h-[550px]"
+      ></iframe>
+    </div>
+
+    <!-- youtube vidoe ends here -->
 
     <!-- footer starts here-->
     <footer
