--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         class="fixed top-12 right-[-100%] w-[200px] bg-white border-2 shadow-lg rounded-md z-50 transition-transform duration-300 ease-in-out md:static md:right-auto md:w-fit md:border-none md:shadow-none md:bg-slate-100 flex"
         id="menu-container"
       >
-        <ul class="p-8 flex flex-col md:flex-row">
+        <ul class="p-8 md:p-2 gap-8 flex flex-col md:flex-row">
           <li class="cursore-pointer"><a href="#">Home</a></li>
           <li class="cursore-pointer"><a href="#">Contact</a></li>
 
@@ -51,11 +51,11 @@
     >
       <div class="flex items-center flex-col md:ps-[15%]">
         <h1
-          class="text-2xl md:text-5xl lg:text-8xl font-bold text-center leading-[50px] md:leading-[80px]"
+          class="text-2xl md:text-5xl lg:text-8xl font-bold text-center leading-[30px] md:leading-[80px]"
         >
           Earn money <br />anytime, anywhere
         </h1>
-        <p class="text-lg mt-8 md:text-xl text-slate-700 text-center">
+        <p class="text-md mt-8 md:text-xl text-slate-700 text-center">
           Download now and sign up. Earn money as much as you can.
         </p>
 
@@ -175,7 +175,9 @@
 
     <!-- youtube video starts here -->
     <div class="w-4/5 mx-auto px-2 md:mt-16">
-      <h1 class="text-2xl font-bold my-4 capitalize">Your video title here</h1>
+      <h1 class="text-lg md:text-2xl mt-4 capitalize">
+        Your video title here
+      </h1>
       <iframe
         src="https://www.youtube.com/embed/kuPzoh5tucI?si=0xKCY_F_skm9FI5k"
         title="YouTube video player"
@@ -188,6 +190,29 @@
     </div>
 
     <!-- youtube vidoe ends here -->
+
+    <!-- apps description starts here -->
+
+    <br /><br />
+
+    <div class="w-4/5 mx-auto">
+      <h1 class="font-bold text-lg uppercase my-2">Student Job Reward</h1>
+
+      
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit adipisci ea ex, saepe maxime doloremque unde. <br> Voluptate at aliquid explicabo consectetur adipisicing elit.?</p>
+
+      <br>
+
+      <p>1. Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis quis, quam dignissimos nihil atque, rem error cumque molestiae ea sed quidem? Culpa laudantium magni quo consectetur ut nobis.</p>
+
+      <br>
+      <p>2. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat commodi, aliquam tenetur ad explicabo porro non debitis quis!</p>
+
+
+
+    </div>
+
+    <!-- apps description ends here -->
 
     <!-- footer starts here-->
     <footer
