--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <main
       class="bg-[#FFFBF3] grid grid-cols-1 px-8 py-8 md:grid-cols-2 min-h-[90vh] place-items-center gap-12 md:gap-2 transition delay-1500"
     >
+      <!-- left cols starts here -->
       <div class="flex items-center flex-col md:ps-[15%]">
         <h1
           class="text-2xl md:text-5xl lg:text-8xl font-bold text-center leading-[30px] md:leading-[80px]"
@@ -159,8 +160,28 @@
           </ul>
         </div>
         <!-- social media ends here -->
-      </div>
 
+
+
+
+    <!-- ads goes here -->
+
+    <div class="w-[90%] mx-auto">
+      <!-- paste your ads code here -->
+    </div>
+
+    <!-- ads ends here -->
+
+
+
+
+
+
+
+      </div>
+      <!-- left cols ends here -->
+
+      <!-- right cols starts here -->
       <div class="">
         <!-- screenshot goes here -->
         <img
@@ -171,13 +192,15 @@
 
         <!-- screenshot ends here -->
       </div>
+      <!-- right cols ends here -->
+
+
+
     </main>
 
     <!-- youtube video starts here -->
     <div class="w-4/5 mx-auto px-2 md:mt-16">
-      <h1 class="text-lg md:text-2xl mt-4 capitalize">
-        Your video title here
-      </h1>
+      <h1 class="text-lg md:text-2xl mt-4 capitalize">Your video title here</h1>
       <iframe
         src="https://www.youtube.com/embed/kuPzoh5tucI?si=0xKCY_F_skm9FI5k"
         title="YouTube video player"
@@ -191,6 +214,14 @@
 
     <!-- youtube vidoe ends here -->
 
+    <!-- ads goes here -->
+
+    <div class="w-[90%] mx-auto">
+      <!-- paste your ads code here -->
+    </div>
+
+    <!-- ads ends here -->
+
     <!-- apps description starts here -->
 
     <br /><br />
@@ -198,25 +229,41 @@
     <div class="w-4/5 mx-auto">
       <h1 class="font-bold text-lg uppercase my-2">Student Job Reward</h1>
 
-      
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit adipisci ea ex, saepe maxime doloremque unde. <br> Voluptate at aliquid explicabo consectetur adipisicing elit.?</p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit adipisci
+        ea ex, saepe maxime doloremque unde. <br />
+        Voluptate at aliquid explicabo consectetur adipisicing elit.?
+      </p>
 
-      <br>
+      <br />
 
-      <p>1. Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis quis, quam dignissimos nihil atque, rem error cumque molestiae ea sed quidem? Culpa laudantium magni quo consectetur ut nobis.</p>
+      <p>
+        1. Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis
+        quis, quam dignissimos nihil atque, rem error cumque molestiae ea sed
+        quidem? Culpa laudantium magni quo consectetur ut nobis.
+      </p>
 
-      <br>
-      <p>2. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat commodi, aliquam tenetur ad explicabo porro non debitis quis!</p>
+      <br />
+      <p>
+        2. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat
+        commodi, aliquam tenetur ad explicabo porro non debitis quis!
+      </p>
+    </div>
+    <!-- apps description ends here -->
 
 
 
+    <!-- ads goes here -->
+
+    <div class="w-[90%] mx-auto">
+      <!-- paste your ads code here -->
     </div>
 
-    <!-- apps description ends here -->
+    <!-- ads ends here -->
 
     <!-- footer starts here-->
     <footer
-      class="text-[12px] text-center min-h-[50px] flex items-center justify-center"
+      class="text-[12px] text-center min-h-[50px] flex items-center justify-center mt-12"
     >
       <p>all rights reserved by &copy;adearnbd.com @2024</p>
     </footer>
